[Update] Refactor the API